@@ -1,4 +1,4 @@
 EBUILD cld-meta-10.4-r3.ebuild 6345 RMD160 aa22e1847ccceb6b4e4e8c21fafdb42b937b30a6 SHA1 a125f0b6a7cdd46a1473cadecd6d625633372e2d SHA256 b980308f2b04e37ee7b2001cde76c452c4e89a484b5d7f47b99a2f9b46b162ac
-EBUILD cld-meta-10.9.ebuild 1619 RMD160 fe6c4fd86fbe6218b0627bffd0c4d9255ac2f8df SHA1 b4f7b8204a17b1131fa5266fff8bc89a9a1348f2 SHA256 8bc701ba6268a1774883368f40f8751a009b126d3e5023f4fd013b445e21b351
-MISC ChangeLog 1751 RMD160 bf78c339805e66b463ca684e87630b540836c1b3 SHA1 ab765585794085c89c5507f5c337879791464433 SHA256 4f09ddaa3eee7f9bc1578e0dd346224317a3a42aaab9de289ced6a0225bf6667
+EBUILD cld-meta-10.9.ebuild 1617 RMD160 a810e916af6b43d63a53e824a05c687145b34243 SHA1 53b2516ba17ff9bc67e95028ec607e32bc6f1f06 SHA256 140aee19636b422daea5908833f94b5baf3c0031711a15c4e76bb50017acd241
+MISC ChangeLog 1864 RMD160 30b622c10a8620bb0e681886f8d6cc038a01d86c SHA1 c97c411355488d8a587d61d4599233f4bce2973b SHA256 e4b1979a333cb223b36e5090449170e8842a0e7c2561179074671b43031a1e18
 MISC metadata.xml 261 RMD160 2aceeb761944d521f163c4b6069c36bc75b0ee1c SHA1 ef324fde01725a0c12d658e689002edffe695b6c SHA256 8bf4a47c7586811fc0bf26d75abbf0f4bc7bb6a9ed501b34622c4d822de83591
