@@ -1,4 +1,4 @@
 EBUILD cldg-meta-10.4.ebuild 5760 RMD160 98ac2684e9f09f8c971eafe3ef26a42a82d1ee83 SHA1 03fad2f39bc755eb620347c5936341961c927809 SHA256 b1fb04cb0a142f9a70a2e9609458023fad1439cf309293ab0f186e19d7d91653
-EBUILD cldg-meta-10.9.ebuild 1606 RMD160 7a4a55ad72a323b644a461dfcddff4fd5ea85f04 SHA1 279fa9f35681e564d19529cefe44a911b1a3adb6 SHA256 d92eecae43c386377b9ddb600b8826b2b72b0c9eb50e98be26966050562a9673
-MISC ChangeLog 2149 RMD160 fe86b9e272fafeddb406f81cd5688f55b9224ce9 SHA1 537d1d91e42b842b70cb46950a42abd6ef943609 SHA256 34d0bfd9d05ed4b52ba8a05477c2adffa4d826e3a2f113f11f9d0d485be65433
+EBUILD cldg-meta-10.9.ebuild 1604 RMD160 db18be01b8f254a181976bf24de72e339b64839a SHA1 565a6263d6e7b4c85fee50595e592ff2761fcf2d SHA256 8c9eb8f33001f49e0fd7ffcee06a7c7f291b50ba58f191315da43db503a20186
+MISC ChangeLog 2264 RMD160 9473424428eba8e2490558d93eb49df7199b9675 SHA1 4fcea953ac1dc153ebf9b50b713c469b4a49d544 SHA256 e10706b4e6c1d91db62c943123c8ec0db330b370d62e5fbfa44665194cb64730
 MISC metadata.xml 263 RMD160 596dddaf55974cdaa7642643631b4e506681adde SHA1 56cba5a8dbf3977d7891ec138b75e8fe3eb6fadd SHA256 0a6e854923033ffffca2b1ce19e0b12ae33a4d6a372b2613e3ded5b750899526
