@@ -1,4 +1,4 @@
 EBUILD cldx-meta-10.4-r1.ebuild 3190 RMD160 2fe8ee33efc82641086b325d987dbdf5dbe2cd06 SHA1 156ec21a6fae4272ee7ea07b160caf476a97ab48 SHA256 ebe7a47a02a28a9ad59c10cd2b4d916a13b5ce9639ec93247d87ba3bb081dbc3
-EBUILD cldx-meta-10.9.ebuild 1890 RMD160 cf9ee720a8171a4dc816dcffabd997474c1b54cb SHA1 9d379f6e4f9a6578fd71b21f1f38277f92793035 SHA256 fccd6a8bd63223317f75fe6e8ae92bfaf731924141d85da93a99d7fc720193dd
-MISC ChangeLog 3029 RMD160 74d80336053c734dc84e002944af3e7763f49504 SHA1 37413720f97987884bd5041d6d9712416454e151 SHA256 2fb57b71522f6186fce471f64cbea99f6943d6f2f66423835aa4cbb5bd94cf7a
+EBUILD cldx-meta-10.9.ebuild 1888 RMD160 592c4b133013da029b2560d6c1856c3276959105 SHA1 89c31f5611033093ef5764c521cfdf19ffb40d77 SHA256 627eae707ec5c0c1b949da280343bda3cbbb6d2b2f12281819b32d2649822875
+MISC ChangeLog 3144 RMD160 cdf580d4cc357f182856a9436d3589b2f273d79e SHA1 bdf79880a8be9308d43a724b097af0fa37f2bb72 SHA256 7f017889abd9e7573a507e6684be14acce2ca29d4e2cd9264b57ad283887be09
 MISC metadata.xml 262 RMD160 2230fae163c003c26da4221c8b25a0c7b9ed0602 SHA1 9187b064dbcca538b3d3349ac9340fd5869e7e96 SHA256 adfc7d0bbf6ccbdbe03704cb131512d2ccfd9c6f71ac5ebc7746c3539116af7e
