@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cld-meta-10.9.ebuild:
+  Stable cld-meta-10.9
+
 *cld-meta-10.9 (22 Sep 2010)
 
   22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
